--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -9,15 +9,18 @@ jobs:
   scrape:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
       - name: Install dependencies
         run: npm install
 
-      - name: Run scraper
-        run: npm run start
+      - name: Run scraper and post to n8n
+        run: node scraper.js
         env:
           N8N_WEBHOOK_URL: ${{ secrets.N8N_WEBHOOK_URL }}
